# causal-eval-artifacts

./: .gitignore  DATA_LICENSE.txt  README.md  artifact_manifest.json  pyproject.toml
data/benchmarks/: README.md
data/metadata/: croissant.json  croissant_draft.json
data/reference/: paper_model_results_expected.json
data/samples/: sample_predictions.jsonl  sample_runtime.yaml
docs/: benchmark_card.md  data_schema.md  evaluation_protocol.md  release_manifest.md
scripts/: export_prompts.py  reproduce_report.py  score_predictions.py  validate_paper_results.py  verify_artifact.sh
src/concept_synth/: __init__.py  io_utils.py
src/concept_synth/analysis/: __init__.py  scm_cascade_attribution.py  scm_common.py  scm_error_taxonomy.py  scm_extract_eval_records.py  scm_favorite_formulas.py  scm_gap_decomposition.py  scm_heldout_root_cause.py  scm_heldout_stress.py  scm_ntopo_cycle_motifs.py  scm_parent_formula_taxonomy.py  scm_repairability.py  scm_report.py  scm_structure_breakdown.py  scm_subset_compare.py  scm_train_heldout_amplification.py  scm_training_equivalence.py  scm_variable_position_analysis.py
src/concept_synth/causal_reasoning/: __init__.py  cind_family.py  evaluator.py  mechanism_dsl.py  prompting.py  runtime_storage.py  runtime_storage_io.py  schema_cr.py  task_registry.py
tests/: test_artifact_smoke.py
